# boss_battle

./: .gitignore  CONVENTIONS.md  README.md  main.py  pyproject.toml
boss_battle/: ask-ai.py  game_context.py  handle_collission.py  main.py  sprites_handler.py  types_.py
boss_battle/boss_generation/: boss_traits.py  open_router_client.py
boss_battle/screens/: config_menu.py  main_menu.py
boss_battle/sprites/: boss.py  player.py  projectile.py  stats.py
