[project]
name = "boss_battle"
version = "0.1.0"
description = "Fast-paced boss battle game in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.11.0",
    "requests>=2.32.3",
    "pygame>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.hatch.build.targets.wheel]
packages = ["boss_battle"]

[tool.ruff]
line-length = 88
target-version = "py313"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ANN", # Type annotations
]
lint.ignore = [
    "E501",  # Line too long (handled by formatter)
    "D100", # Top of module missing docstring
    "D213",
    "D203"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
